--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Phaser 3 Project Template using Rollup and TypeScript",
   "main": "src/game.ts",
   "scripts": {
-    "dev": " rollup --config rollup.config.dev.js",
+    "dev": " nodemon --watch 'src/**/*' --exec rollup -c rollup.config.dev.js",
     "build": "rollup --config rollup.config.dist.js",
     "watch": "rollup --watch --config rollup.config.dev.js"
   },
